# GrammarApi

./: Cargo.toml  Claude.md  Dockerfile  readme.md
.github/workflows/: ci.yml  release.yml
grammar_checker/: DESIGN_SYSTEM.md  analysis_options.yaml  pubspec.yaml  test_fixtures.json
grammar_checker/android/app/: build.gradle.kts
grammar_checker/integration_test/: app_test.dart  test_fixtures.dart
grammar_checker/ios/Runner/: Info.plist
grammar_checker/ios/Runner.xcodeproj/: project.pbxproj
grammar_checker/lib/: app.dart  main.dart
grammar_checker/lib/models/: check_response.dart  grammar_match.dart
grammar_checker/lib/providers/: grammar_check_provider.dart
grammar_checker/lib/screens/: grammar_check_screen.dart
grammar_checker/lib/services/: grammar_api_service.dart
grammar_checker/lib/theme/: app_colors.dart  app_theme.dart
grammar_checker/lib/widgets/: error_card.dart  error_list.dart  gradient_button.dart  score_badge.dart  text_input_area.dart
grammar_checker/linux/runner/: my_application.cc
grammar_checker/macos/Runner.xcodeproj/: project.pbxproj
grammar_checker/macos/Runner/Configs/: AppInfo.xcconfig
grammar_checker/web/: index.html  manifest.json
grammar_checker/windows/runner/: Runner.rc
src/: lib.rs  main.rs
tests/: api.rs  e2e.rs  edge_cases.rs  grammar.rs  spelling.rs
tests/common/: fixtures.rs  mod.rs
