[package]
name = "grammar-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "grammar_api"
path = "src/lib.rs"

[[bin]]
name = "grammar-api"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
harper-core = "0.29"
spellbook = "0.2"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
