[package]
name = "grammar-api"
version = "0.1.0"
edition = "2021"
description = "A grammar and spelling checking API using Harper"
license = "MIT"
repository = "https://github.com/example/grammar-api"
keywords = ["grammar", "spelling", "api", "harper"]
categories = ["text-processing", "web-programming"]

[lib]
name = "grammar_api"
path = "src/lib.rs"

[[bin]]
name = "grammar-api"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
harper-core = "0.29"
tower-http = { version = "0.6", features = ["cors", "request-id", "trace"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
uuid = { version = "1", features = ["v4"] }
http = "1"

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"

[lints.rust]
# ALL ERRORS - NO WARNINGS
unsafe_code = "deny"

# Future compatibility - ERRORS
future_incompatible = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }

# Missing documentation - ERRORS
missing_docs = "deny"
missing_debug_implementations = "deny"

# Code correctness - ERRORS
unused = { level = "deny", priority = -1 }
dead_code = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"

# Type safety - ERRORS
trivial_casts = "deny"
trivial_numeric_casts = "deny"

# Async - ERRORS
elided_lifetimes_in_paths = "deny"

# Other strict lints - ERRORS
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
unit_bindings = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

[lints.clippy]
# ALL ERRORS - NO WARNINGS
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Dangerous patterns - ERRORS
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

# Security-related - ERRORS
mem_forget = "deny"

# Code quality - ERRORS
fn_params_excessive_bools = "deny"

# Allow some that are too strict for this project
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
doc_markdown = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
missing_const_for_fn = "allow"
unused_self = "allow"
uninlined_format_args = "allow"
unnecessary_wraps = "allow"
option_if_let_else = "allow"
redundant_closure_for_method_calls = "allow"
similar_names = "allow"
match_same_arms = "allow"
items_after_statements = "allow"
string_lit_as_bytes = "allow"
needless_raw_string_hashes = "allow"
non_ascii_literal = "allow"
suboptimal_flops = "allow"
iter_without_into_iter = "allow"
into_iter_without_iter = "allow"
too_many_arguments = "allow"
needless_pass_by_value = "allow"
redundant_clone = "allow"
trivially_copy_pass_by_ref = "allow"
unnecessary_map_or = "allow"
field_reassign_with_default = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
or_fun_call = "allow"
too_many_lines = "allow"
redundant_closure = "allow"
format_collect = "allow"
cognitive_complexity = "allow"
match_wildcard_for_single_variants = "allow"
string_add_assign = "allow"
if_not_else = "allow"
